# tobecon-call-evaluator

./: .env.example  .gitignore  README.md  pyproject.toml
src/tobecon_call_evaluator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/tobecon_evaluator/: __init__.py  agent.py  cli.py  config.py  pricing.py  reporting.py  schemas.py  stt.py
tests/: test_pricing.py  test_reporting.py
